# whole_body_master_slave_choreonoid

./: README.md
primitive_motion_level_msgs/: CMakeLists.txt  package.xml
primitive_motion_level_msgs/idl/: PrimitiveState.idl
primitive_motion_level_msgs/msg/: PrimitiveState.msg  PrimitiveStateArray.msg
primitive_motion_level_tools/: .rosinstall  CMakeLists.txt  package.xml
primitive_motion_level_tools/include/primitive_motion_level_tools/: PrimitiveState.h
primitive_motion_level_tools/rtc/: CMakeLists.txt
primitive_motion_level_tools/rtc/PrimitiveStateROSBridge/: CMakeLists.txt  PrimitiveStateROSBridge.cpp  PrimitiveStateROSBridgeComp.cpp
primitive_motion_level_tools/src/: PrimitiveState.cpp
whole_body_master_slave_choreonoid/: .gitignore  .rosinstall  CMakeLists.txt  package.xml
whole_body_master_slave_choreonoid/idl/: CFRControllerService.idl  EndEffectorState.idl  PrimitiveMotionLevelCOMControllerService.idl  PrimitiveMotionLevelControllerService.idl  PrimitiveState.idl  PrimitiveStateIdl.idl  WholeBodyMasterSlaveChoreonoidService.idl
whole_body_master_slave_choreonoid/msg/: PrimitiveState.msg
whole_body_master_slave_choreonoid/rtc/: CMakeLists.txt
whole_body_master_slave_choreonoid/rtc/CFRController/: CFRCalculator.cpp  CFRCalculator.h  CFRController.cpp  CFRController.h  CFRControllerComp.cpp  CFRControllerService_impl.cpp  CFRControllerService_impl.h  CMakeLists.txt  PrimitiveCommand.cpp  PrimitiveCommand.h  README.md
whole_body_master_slave_choreonoid/rtc/PrimitiveMotionLevelCOMController/: CMakeLists.txt  PositionController.h  PrimitiveCommand.cpp  PrimitiveCommand.h  PrimitiveMotionLevelCOMController.cpp  PrimitiveMotionLevelCOMController.h  PrimitiveMotionLevelCOMControllerComp.cpp  PrimitiveMotionLevelCOMControllerService_impl.cpp  PrimitiveMotionLevelCOMControllerService_impl.h  README.md
whole_body_master_slave_choreonoid/rtc/PrimitiveMotionLevelController/: CMakeLists.txt  Collision.cpp  Collision.h  PositionController.cpp  PositionController.h  PrimitiveCommand.cpp  PrimitiveCommand.h  PrimitiveMotionLevelController.cpp  PrimitiveMotionLevelController.h  PrimitiveMotionLevelControllerComp.cpp  PrimitiveMotionLevelControllerService_impl.cpp  PrimitiveMotionLevelControllerService_impl.h  README.md
whole_body_master_slave_choreonoid/rtc/PrimitiveStateROSBridge/: CMakeLists.txt  PrimitiveStateROSBridge.cpp  PrimitiveStateROSBridge.h
whole_body_master_slave_choreonoid/rtc/WholeBodyMasterSlaveChoreonoid/: CMakeLists.txt  EndEffectorState.idl  WholeBodyMasterSlaveChoreonoid.cpp  WholeBodyMasterSlaveChoreonoid.h  WholeBodyMasterSlaveChoreonoidComp.cpp  WholeBodyMasterSlaveChoreonoidService.idl  WholeBodyMasterSlaveChoreonoidService_impl.cpp  WholeBodyMasterSlaveChoreonoidService_impl.h  wbms_core.h
whole_body_master_slave_choreonoid/scripts/: cfr_visualizer.py  pml_interactive_marker_server.py
whole_body_position_controller/: .gitignore  .rosinstall  CMakeLists.txt  package.xml
whole_body_position_controller/idl/: WholeBodyPositionControllerService.idl
whole_body_position_controller/rtc/: CMakeLists.txt
whole_body_position_controller/rtc/WholeBodyPositionController/: CMakeLists.txt  Collision.cpp  Collision.h  PositionController.cpp  PositionController.h  README.md  WholeBodyPositionController.cpp  WholeBodyPositionController.h  WholeBodyPositionControllerComp.cpp  WholeBodyPositionControllerService_impl.cpp  WholeBodyPositionControllerService_impl.h
whole_body_torque_controller/: .gitignore  .rosinstall  CMakeLists.txt  package.xml
whole_body_torque_controller/idl/: PrimitiveMotionLevelTorqueControllerService.idl  WholeBodyTorqueControllerService.idl
whole_body_torque_controller/rtc/: CMakeLists.txt
whole_body_torque_controller/rtc/PrimitiveMotionLevelTorqueController/: CMakeLists.txt  Collision.cpp  Collision.h  PrimitiveCommand.cpp  PrimitiveCommand.h  PrimitiveMotionLevelTorqueController.cpp  PrimitiveMotionLevelTorqueController.h  PrimitiveMotionLevelTorqueControllerComp.cpp  PrimitiveMotionLevelTorqueControllerService_impl.cpp  PrimitiveMotionLevelTorqueControllerService_impl.h  README.md  TorqueController.cpp  TorqueController.h
whole_body_torque_controller/rtc/WholeBodyTorqueController/: CMakeLists.txt  Collision.cpp  Collision.h  PrimitiveCommand.cpp  PrimitiveCommand.h  README.md  TorqueController.cpp  TorqueController.h  WholeBodyTorqueController.cpp  WholeBodyTorqueController.h  WholeBodyTorqueControllerComp.cpp  WholeBodyTorqueControllerService_impl.cpp  WholeBodyTorqueControllerService_impl.h
