<?xml version="1.0"?>
<package format="2">
  <name>primitive_motion_level_tools</name>
  <version>0.0.0</version>
  <description>The primitive_motion_level_tools package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>

  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>urdf</depend>
  <depend>primitive_motion_level_msgs</depend>

  <depend>cpp_filters</depend>
</package>
