<?xml version="1.0"?>
<package format="2">
  <name>whole_body_master_slave_choreonoid</name>
  <version>0.0.0</version>
  <description>The whole_body_master_slave_choreonoid package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>fullbody_inverse_kinematics_solver</depend>
  <depend>prioritized_inverse_kinematics_solver</depend>
  <depend>cpp_filters</depend>
  <depend>ik_constraint_joint_limit_table</depend>
  <depend>collision_checker_msgs</depend>
  <depend>primitive_motion_level_msgs</depend>
  <depend>static_equiblium_test</depend>

</package>
