<?xml version="1.0"?>
<package format="2">
  <name>whole_body_master_slave_choreonoid</name>
  <version>0.0.0</version>
  <description>The whole_body_master_slave_choreonoid package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>

  <depend>primitive_motion_level_msgs</depend>
  <depend>primitive_motion_level_tools</depend>
  <depend>static_equilibuim_test</depend>

</package>
