<?xml version="1.0"?>
<package format="2">
  <name>whole_body_torque_controller</name>
  <version>0.0.0</version>
  <description>The whole_body_torque_controller package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild</depend>

  <depend>primitive_motion_level_msgs</depend>
</package>
